[gd_scene load_steps=13 format=3 uid="uid://hnnds01fc3au"]

[ext_resource type="Script" path="res://scripts/otchoz_level.gd" id="1_6tj17"]
[ext_resource type="Texture2D" uid="uid://d26sjdjtf60pa" path="res://sprites/tiles.png" id="1_m4plf"]
[ext_resource type="PackedScene" uid="uid://blgqa2l8xh3dk" path="res://objects/transition_layer.tscn" id="2_2ryk7"]
[ext_resource type="Texture2D" uid="uid://bdtt5ei4ix11l" path="res://sprites/icon.svg" id="2_bkkyb"]
[ext_resource type="Script" path="res://scripts/truck2D.gd" id="2_dnr5s"]
[ext_resource type="Texture2D" uid="uid://bn4v8nlenpice" path="res://sprites/Otchoz/Tilemap.png" id="3_u0kxd"]
[ext_resource type="PackedScene" uid="uid://cacrapbtcy27r" path="res://objects/rythm_visual_helper.tscn" id="5_d703r"]
[ext_resource type="PackedScene" uid="uid://bj4ndq5wr0mvi" path="res://scenes/pattern_player.tscn" id="6_o3201"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ypnri"]
texture = ExtResource("3_u0kxd")
texture_region_size = Vector2i(14, 14)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
0:3/size_in_atlas = Vector2i(2, 3)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
2:4/size_in_atlas = Vector2i(2, 2)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
4:4/size_in_atlas = Vector2i(2, 2)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
6:4/size_in_atlas = Vector2i(2, 2)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
8:4/size_in_atlas = Vector2i(1, 2)
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/size_in_atlas = Vector2i(3, 3)
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
6:3/next_alternative_id = 2
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/1 = 1
6:3/1/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/1/physics_layer_0/angular_velocity = 0.0
6:3/1/custom_data_0 = true
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
0:6/size_in_atlas = Vector2i(2, 3)
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
9:7/size_in_atlas = Vector2i(3, 3)
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
8:7/size_in_atlas = Vector2i(1, 2)
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
4:7/size_in_atlas = Vector2i(2, 2)
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
2:7/size_in_atlas = Vector2i(2, 2)
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o3nl4"]
texture = ExtResource("1_m4plf")

[sub_resource type="TileSet" id="TileSet_a7oir"]
tile_size = Vector2i(14, 14)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "spawnable"
custom_data_layer_0/type = 1
sources/4 = SubResource("TileSetAtlasSource_o3nl4")
sources/0 = SubResource("TileSetAtlasSource_ypnri")

[sub_resource type="CircleShape2D" id="CircleShape2D_hclmx"]

[node name="Otchoz" type="Node2D"]
texture_filter = 1
position = Vector2(-1, 2)
script = ExtResource("1_6tj17")
valid_input_cooldown = 0.2

[node name="TransitionLayer" parent="." instance=ExtResource("2_2ryk7")]

[node name="level" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="TileMap" type="TileMap" parent="level"]
tile_set = SubResource("TileSet_a7oir")
cell_quadrant_size = 14
format = 2
layer_0/tile_data = PackedInt32Array(262149, 65536, 0, 262150, 65536, 0, 262151, 65536, 0, 262152, 65536, 0, 262153, 65536, 0, 262154, 65536, 0, 262155, 65536, 0, 262156, 65536, 0, 262157, 65536, 0, 262158, 131072, 0, 262159, 65536, 0, 262160, 65536, 0, 262161, 65536, 0, 262162, 65536, 0, 262163, 131072, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589842, 65536, 0, 589841, 65536, 0, 589840, 65536, 0, 589839, 131072, 0, 589843, 65536, 2, 524302, 0, 0, 458766, 0, 0, 393230, 0, 0, 327694, 0, 0, 589838, 0, 2, 262164, 65536, 0, 262165, 65536, 1, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786452, 65536, 0, 786451, 65536, 0, 786450, 65536, 0, 786449, 65536, 0, 786448, 65536, 0, 786447, 0, 2, 655375, 0, 0, 720911, 0, 0, 786453, 65536, 2, 327695, 262144, 0, 327696, 327680, 0, 327697, 393216, 0, 393231, 262144, 1, 393232, 327680, 1, 393233, 393216, 1, 458767, 196608, 2, 458768, 196608, 2, 458769, 196608, 2, 458770, 196608, 2, 393234, 196608, 2, 327698, 196608, 2, 524306, 196608, 2, 524305, 196608, 2, 524304, 196608, 2, 524303, 196608, 2, 327700, 196608, 2, 393236, 196608, 2, 458772, 196608, 2, 524308, 196608, 2, 589844, 196608, 2, 655380, 196608, 2, 720916, 196608, 2, 720915, 196608, 2, 720914, 196608, 2, 720913, 196608, 2, 720912, 196608, 2, 655376, 196608, 2, 655377, 196608, 2, 655378, 196608, 2, 655379, 196608, 2, 327693, 393216, 3, 393229, 524288, 0, 458765, 393216, 65539, 524301, 524288, 0, 327692, 524288, 0, 720910, 393216, 65539, 786446, 393216, 65539, 851983, 393216, 65539, 851984, 393216, 65539, 851985, 393216, 65539, 851986, 393216, 65539, 851987, 393216, 65539, 851988, 393216, 65539, 851989, 393216, 65539)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(655377, 131072, 4, 655379, 524288, 4, 655380, 524288, 4)

[node name="truck2D" type="Node2D" parent="level"]
position = Vector2(70, 56)
script = ExtResource("2_dnr5s")

[node name="Sprite2D" type="Sprite2D" parent="level/truck2D"]
position = Vector2(6, 6)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_bkkyb")

[node name="RayCast2D" type="RayCast2D" parent="level/truck2D"]
position = Vector2(6, 6)
target_position = Vector2(0, 16)

[node name="Area2D" type="Area2D" parent="level/truck2D"]
position = Vector2(6, 6)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/truck2D/Area2D"]
shape = SubResource("CircleShape2D_hclmx")

[node name="rythm_helper" parent="." instance=ExtResource("5_d703r")]
position = Vector2(1090, 588)
scale = Vector2(0.582031, 0.582031)

[node name="PatternPlayer" parent="." instance=ExtResource("6_o3201")]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 1083.0
offset_top = 459.0
offset_right = 1456.0
offset_bottom = 486.0
rotation = -1.5708
value = 50.0
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 1069.0
offset_top = 31.0
offset_right = 1130.0
offset_bottom = 82.0
bbcode_enabled = true
text = "[font_size=44]😃[/font_size]"
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 1061.0
offset_top = 476.0
offset_right = 1138.0
offset_bottom = 538.0
bbcode_enabled = true
text = "[font_size=44]😡[/font_size]"
autowrap_mode = 0
